--- a/nginx/Makefile
+++ b/nginx/Makefile
@@ -1,5 +1,5 @@
 PWD := $(shell pwd)
-IMAGE_NAME := k8s-complex-server
+IMAGE_NAME := k8s-complex-nginx
 VTAG := latest
 
 .PHONY: dev/build
@@ -12,10 +12,6 @@ dev/build:
 .PHONY: dev/run
 dev/run:
 	docker run \
-		-it \
-		-p 5000:5000 \
-		-v /app/node_modules \
-		-v $(PWD):/app \
 		hiro918/dev-$(IMAGE_NAME):$(VTAG)
 
 .PHONY: build
@@ -29,5 +25,4 @@ build:
 run:
 	docker run \
 		-it \
-		-p 5000:5000 \
 		hiro918/$(IMAGE_NAME):$(VTAG)
