Add deployment of images

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,15 @@ after_success:
   - docker push hiro918/k8s-complex-worker
   - docker push hiro918/k8s-complex-server
   - docker push hiro918/k8s-complex-nginx
+
+deploy:
+  provider: elasticbeanstalk
+  regin: "ap-northeast-1"
+  app: hironori-udemy-docker-k8s-multi-docker
+  env: HironoriUdemyDockerK8sMultiDocker-env-1
+  bucket_name: elasticbeanstalk-ap-northeast-1-085107194442
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
